--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -168,7 +168,7 @@ doplněné příjemnou minerálností.</dd>
     </dl>
 
     <dl class="meal">
-      <dt>First edition Carmenere 2017 0,75L – suché</dt>
+      <dt>First edition Carmenere 2017 – suché</dt>
       <dd>Oblast Chile, Valle Secreto.</dd>
       <dd>Již při letmém nadechnutí k tomuto jedinečnému vínu vás okouzlí sametové tóny ostružin a zralého tmavého ovoce. Chuť je identická s vůní, velmi vyvážená, elegantní s dlouhou perzistencí s příjemným dotekem hřebíčku a pepře.</dd>
       <dd class="price">
