--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -6,7 +6,7 @@
     <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Louis Perdier Demi Sec 0,75 l</dt>
+      <dt>Louis Perdier Demi Sec</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
       <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce.</dd>
       <dd class="price">
@@ -14,7 +14,7 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO DOC Gio Cuvée, Extra dry 0,75 l</dt>
+      <dt>Prosecco Conca d´ORO DOC Gio Cuvée, Extra dry</dt>
       <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a květiny. Chuť svěží, šťavnatá, ovocná a plná příjemné dochutí šťavnaté kyselinky.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>290 Kč</span></span>
@@ -22,7 +22,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO DOC Millesimato Cuvée, Extra dry 0,75 l</dt>
+      <dt>Prosecco Conca d´ORO DOC Millesimato Cuvée, Extra dry</dt>
       <dd>Prosecco s bohatým sametovým perlením a světlejší slámově žlutou barvou. Intenzivní vůně jablka, meruňkové tóny s náznakem bílé broskve. V ústech je víno elegantní s vyváženým poměrem pikantní kyselinky a zbytkového cukru.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>370 Kč</span></span>
@@ -30,14 +30,14 @@
     </dl>
 
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut 0,75 l</dt>
+      <dt>Prosecco Conca d´ORO Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut</dt>
       <dd>Prosecco vyrobené v té nejvyšší kvalitě s bohatým sametovým perlením a světlejší slámově žlutou barvou. Má kompletní a elegantní charakter jak ve vůni, tak chuti. Postupně se rozvíjí svěží citrusy a zároveň ovocné tóny zralých jablek, hrušek, květů akátu a žlutého melounu.</dd>
       <dd class="price multiple">
         <span><span>0,75 l</span><span>550 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Vedova Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut 0,75 l</dt>
+      <dt>Prosecco Vedova Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut</dt>
       <dd>Prosecco Superiore z místa Valdobbiadene s původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s tóny jasmínu, růže a akátu, které velmi příjemně ladí s tóny jablka, banánu a ananasu s minerálními podtóny.</dd>
       <dd class="price multiple">
         <span><span>0,75 l</span><span>550 Kč</span></span>
