--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -54,6 +54,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
       <dt>Millesimato Cuvée, Extra dry <span>0,75 l</span></dt>
+      <dd class="price">370 Kč</dd>
       <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a></dt>
       <dt>Gio Cuvée, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
