--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -26,7 +26,7 @@
       <dd class="price">35 Kč</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
+    <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje a aperitivy</h>
     <desc>n/a</desc>
 <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
@@ -53,21 +53,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a></dt>
-      <dd class="price"> </dd>
-      <dt>Gio Cuvée, Extra dry <span>0,1 l</span></dt>
-      <dd class="price">60 Kč</dd>
-      <dt>Gio Cuvée, Extra dry <span>0,75 l</span></dt>
-      <dd class="price">290 Kč</dd>
-      <dt>Millesimato Cuvée, Extra dry <span>0,75 l</span></dt>
-      <dd class="price">370 Kč</dd>
-      <dt>Valdobbiadene Superiore <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
-      <dd class="price">550 Kč</dd>
-      <dt>VEDOVA Valdobbiadene Superiore <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
-      <dd class="price">550 Kč</dd>
-      <dt>Louis Perdrier <span>0,75 l</span></dt>
-      <dd class="price">290 Kč</dd>
-      <dd>Demi Sec nebo Brut (oblast Francie)</dd>
+      <dt>Sekty a Prosecco</dt>
+      <dd>Samostaně <a href="vinny_listek#sekty">vinném lístku</a></dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
