--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -54,7 +54,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
       <dt>Sekty a Prosecco</dt>
-      <dd>Samostaně <a href="/vinny_listek#sekty">vinném lístku</a></dd>
+      <dd>Samostaně <a href="/#sekty">vinném lístku</a></dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
