--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,8 +53,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Sekty a Prosecco</dt>
-      <dd>Samostaně <a href="/#sekty">vinném lístku</a></dd>
+      <dt class="noprint">Sekty a Prosecco</dt>
+      <dd class="noprint">Samostaně na <a href="/#sekty">vinném lístku</a></dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
