--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -100,7 +100,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Rulandské šedé 2018 pozdní sběr – suché</dt>
+      <dt>Zapletal Rulandské šedé 2018 pozdní sběr – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
       <dd>Barva je sytě žlutá, ve vůni a chuti nás toto víno zaujme tóny hruškového kompotu a jemnou máslovou, až smetanovou dlouhotrvající dochutí.</dd>
       <dd class="price">
