--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -91,7 +91,7 @@
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Müller Thurgau 2018 kabinet – suché</dt>
+      <dt>Zapletal Müller Thurgau 2018 kabinet – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
       <dd>Víno má jiskrnou zlatavouz barvu. Ve vůni a chuti se snoubí bílá broskev, hrušky a jemné tóny citrusů. Harmonická dochuť s jemným zbytkovým cukrem a šťavnatou kyselinkou.</dd>
       <dd class="price">
@@ -141,7 +141,7 @@ doplněné příjemnou minerálností.</dd>
     <desc>n/a</desc>
 
     <dl class="meal">
-      <dt>Vinné sklepy Zapletal Frankovka pozdní sběr 2016 – suché</dt>
+      <dt>Zapletal Frankovka pozdní sběr 2016 – suché</dt>
       <dd>Oblast Morava, Velké Bílovice.</dd>
       <dd>Barva tohoto vína je tmavě rubínová s fialovými odlesky. Výrazná vůně višní v hořké čokoládě a švestkových povidel. V chuti se k povidlům přidávají i hutnější tóny čokolády a kávy.</dd>
       <dd class="price">
