--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -6,10 +6,10 @@
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Staropramen Extra chmelená 12° točené <span>0,4 l</span></dt>
+      <dt>Staropramen Extra chmelená 12 točené <span>0,4 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Speciál z minipivovaru <span>0,3 l a 0,5 l</span></dt>
-      <dd>dle aktuální nabídky</dd>
+      <dt>Speciál z minipivovaru točené <span>0,3 l a 0,5 l</span></dt>
+      <dd>Dle <a href="#pivo">aktuální nabídky</a></dd>
       <dt>Staropramen nealko točené <span>0,3 l</span></dt>
       <dd class="price">30 Kč</dd>
       <dt>Staropramen nealko točené <span>0,5 l</span></dt>
