--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -8,7 +8,7 @@
     <dl class="meal">
       <dt>Louis Perdier Demi Sec</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
-      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce.</dd>
+      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>290 Kč</span></span>
       </dd>
