--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -57,7 +57,7 @@
     </dl>
     <dl class="meal">
       <dt>Cheese Burger</dt>
-      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="definition-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádeje obsluhu).</dd>
+      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, náš <a var="definition-bbq">BBQ</a> dip, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádeje obsluhu).</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
