--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -51,7 +51,7 @@
     <desc>Hamburgery připravujeme tradičně – velké a šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
-      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
+      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, náš <a var="definition-bbq">BBQ</a> dip, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">195 Kč</dd>
     </dl>
@@ -339,6 +339,8 @@
       <dt>Česnekový dip</dt>
       <dd class="price">33 Kč</dd>
       <dt><a var="definition-bbq">BBQ</a> dip</dt>
+      <dd class="price">33 Kč</dd>
+      <dt><a var="definition-bbq">BBQ</a> omáčka</dt>
       <dd class="price">33 Kč</dd>
       <dt>Kečup Heinz</dt>
       <dd class="price">26 Kč</dd>
