--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -14,7 +14,7 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO DOC Gio Cuvée, Extra dry</dt>
+      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Gio Cuvée, Extra dry</dt>
       <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a květiny. Chuť svěží, šťavnatá, ovocná a plná příjemné dochutí šťavnaté kyselinky.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>290 Kč</span></span>
@@ -22,7 +22,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO DOC Millesimato Cuvée, Extra dry</dt>
+      <dt>Prosecco Conca d´ORO <a var="definition-doc">DOC</a> Millesimato Cuvée, Extra dry</dt>
       <dd>Prosecco s bohatým sametovým perlením a světlejší slámově žlutou barvou. Intenzivní vůně jablka, meruňkové tóny s náznakem bílé broskve. V ústech je víno elegantní s vyváženým poměrem pikantní kyselinky a zbytkového cukru.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>370 Kč</span></span>
