--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -30,14 +30,14 @@
     </dl>
 
     <dl class="meal">
-      <dt>Prosecco Conca d´ORO Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut</dt>
+      <dt>Prosecco Conca d´ORO <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
       <dd>Prosecco vyrobené v té nejvyšší kvalitě s bohatým sametovým perlením a světlejší slámově žlutou barvou. Má kompletní a elegantní charakter jak ve vůni, tak chuti. Postupně se rozvíjí svěží citrusy a zároveň ovocné tóny zralých jablek, hrušek, květů akátu a žlutého melounu.</dd>
       <dd class="price multiple">
         <span><span>0,75 l</span><span>550 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Vedova Conegliano Valdobbiadene Superiore <a var="definition-docg">DOCG</a>, Brut</dt>
+      <dt>Prosecco Vedova <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
       <dd>Prosecco Superiore z místa Valdobbiadene s původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s tóny jasmínu, růže a akátu, které velmi příjemně ladí s tóny jablka, banánu a ananasu s minerálními podtóny.</dd>
       <dd class="price multiple">
         <span><span>0,75 l</span><span>550 Kč</span></span>
