--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -37,7 +37,7 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Prosecco Vedova Conegliano <a var="definition-docg">DOCG</a> Valdobbiadene Superiore, Brut</dt>
+      <dt>Prosecco Vedova <a var="definition-docg">DOCG</a> Conegliano Valdobbiadene Superiore, Brut</dt>
       <dd>Prosecco Superiore z místa Valdobbiadene s původem hroznů ze svahů této lokality je vždy zárukou té nejvyšší kvality prosecca. Získá si Vás komplexní vůní s tóny jasmínu, růže a akátu, které velmi příjemně ladí s tóny jablka, banánu a ananasu s minerálními podtóny.</dd>
       <dd class="price multiple">
         <span><span>0,75 l</span><span>550 Kč</span></span>
