--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,8 +53,20 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt class="noprint">Sekty a Prosecco</dt>
-      <dd class="noprint">Samostaně na <a href="/#sekty">vinném lístku</a></dd>
+      <dt>Louis Perdier Demi Sec <span>0,75 l</span></dt>
+      <dd class="price">290 Kč</dd>
+      <dt>Gio Cuvée, Extra dry <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a></dd>
+      <dd class="price">290 Kč</dd>      
+      <dt>Millesimato Cuvée, Extra dry <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a></dd>
+      <dd class="price">370 Kč</dd>      
+      <dt>Conegliano Valdobbiadene Superiore, Brut <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a></dd>
+      <dd class="price">550 Kč</dd>      
+      <dt>Conegliano Valdobbiadene Superiore DOCG, Brut <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a></dd>
+      <dd class="price">550 Kč</dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
