--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -64,7 +64,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Conegliano Valdobbiadene Superiore, Brut <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a></dd>
-      <dt>Conegliano Valdobbiadene Superiore DOCG, Brut <span>0,75 l</span></dt>
+      <dt>Conegliano Valdobbiadene Superiore, Brut <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>
       <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a></dd>
     </dl>
