--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,20 +53,21 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Louis Perdier Demi Sec <span>0,75 l</span></dt>
+      <dt>Louis Perdrier <span>0,75 l</span></dt>
       <dd class="price">290 Kč</dd>
-      <dt>Gio Cuvée, Extra dry <span>0,75 l</span></dt>
+      <dd>Demi Sec</dd>
+      <dt>Gio Cuvée <span>0,75 l</span></dt>
       <dd class="price">290 Kč</dd>      
-      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a></dd>
-      <dt>Millesimato Cuvée, Extra dry <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Millesimato Cuvée <span>0,75 l</span></dt>
       <dd class="price">370 Kč</dd>      
-      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a></dd>
-      <dt>Conegliano Valdobbiadene Superiore, Brut <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>      
-      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a></dd>
-      <dt>Conegliano Valdobbiadene Superiore, Brut <span>0,75 l</span></dt>
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a> Brut</dd>
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>
-      <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a></dd>
+      <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a> Brut</dd>
     </dl>
 
     <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
