--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,9 +53,9 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Louis Perdrier Demi Sec <span>0,75 l</span></dt>
+      <dt>Louis Perdrier Demi Sec/Brut <span>0,75 l</span></dt>
       <dd class="price">290 Kč</dd>
-      <dd>Polosladké šumivé víno</dd>
+      <dd>Oblast Francie</dd>
       <dt>Gio Cuvée <span>0,75 l</span></dt>
       <dd class="price">290 Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
