--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -6,7 +6,7 @@
     <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Louis Perdrier Demi Sec</dt>
+      <dt>Louis Perdrier Demi Sec / Brut</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
       <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně.</dd>
       <dd class="price">
