--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -69,7 +69,7 @@
     </dl>
     <dl class="meal">
       <dt>Tagliatelle Funghi s krůtím prsem <a var="definition-sous-vide">sous-vide</a></dt>
-      <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="definition-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
+      <dd>Italské široké nudle s delikátní omáčkou z lesních hub a smetany, krůtí prso vařené metodou <a var="definition-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">175 Kč</dd>
     </dl>
