--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -57,7 +57,7 @@
     </dl>
     <dl class="meal">
       <dt>Cheese Burger</dt>
-      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, náš <a var="definition-bbq">BBQ</a> dip, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádeje obsluhu).</dd>
+      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, náš <a var="definition-bbq">BBQ</a> dip, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádejte obsluhu).</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
@@ -122,7 +122,7 @@
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="definition-sous-vide">sous-vide</a>.</desc>
     <dl class="meal">
       <dt>Crispy Salmon</dt>
-      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing (stupeň propečení lososa medium, pro změnu požádeje obsluhu).</dd>
+      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing (stupeň propečení lososa medium, pro změnu požádejte obsluhu).</dd>
       <dt class="price">Cena</dt>
       <dd class="price">255 Kč</dd>
     </dl>
@@ -157,7 +157,7 @@
     <desc>Grilujeme prvotřídní marinované nikdy nemražené maso. Stejně jako u steaků je grilované maso vždy odleželé na ideální teplotu (nikoli přímo z lednice).</desc>
     <dl class="meal">
       <dt>Grilovaná hovězí játra</dt>
-      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát Coleslaw (stupeň propečení jater medium, pro změnu požádeje obsluhu).</dd>
+      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát Coleslaw (stupeň propečení jater medium, pro změnu požádejte obsluhu).</dd>
       <dt class="price">Cena</dt>
       <dd class="price">179 Kč</dd>
     </dl>
