--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -59,6 +59,9 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Gio Cuvée <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
+      <dt>Gio Cuvée <span>0,75 l</span></dt>
+      <dd class="price">290 Kč</dd>      
+      <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
       <dt>Millesimato Cuvée <span>0,75 l</span></dt>
       <dd class="price">370 Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
