--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -82,17 +82,17 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">65 Kč</dd>
       <dt>Coca-Cola <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>Original, zero lemon, zero</dd>
+      <dd>(original, zero lemon, zero)</dd>
       <dt>Fanta pomeranč <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
       <dt>Sprite <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
       <dt>Kinley <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>Tonic water, ginger, rose</dd>
+      <dd>(tonic water, ginger, rose)</dd>
       <dt>Cappy <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>Pomeranč 100%, jahoda, multivitamín, černý rybíz, hruška, jablko</dd>
+      <dd>(pomeranč 100%, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
       <dt>Bonaqua <span>0,25 l</span></dt>
       <dd class="price">30 Kč</dd>
       <dd>Perlivá, jemně perlivá, neperlivá</dd>
@@ -100,13 +100,13 @@ nápoje detailněji popsány včetně složení.</desc> -->
 <!--       <dd class="price">60 Kč</dd> -->
       <dt>Romerquelle <span>0,33 l</span></dt>
       <dd class="price">35 Kč</dd>
-      <dd>Perlivá, neperlivá, lemon grass</dd>
+      <dd>(perlivá, neperlivá, lemon grass)</dd>
       <dt>Romerquelle <span>0,75 l</span></dt>
       <dd class="price">70 Kč</dd>
-      <dd>Perlivá, neperlivá</dd>
+      <dd>(perlivá, neperlivá)</dd>
       <dt>Ledový čaj Fuzetea <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>Zelený s mangem a heřmánkem, černý s broskví a ibiškem</dd>
+      <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
       <dt>Karafa s vodou a citronem <span>1 l</span></dt>
       <dd class="price">65 Kč</dd>
     </dl>
@@ -137,7 +137,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Sypané čaje </dt>
       <dd class="price">49 Kč</dd>
-      <dd>Ovocný, černý – Earl Grey, rooibos, zelený</dd>
+      <dd>(ovocný, černý – Earl Grey, rooibos, zelený)</dd>
       <dt>Zázvorový čaj</dt>
       <dd class="price">60 Kč</dd>
       <dd>Čerstvý zázvor</dd>
