--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -9,7 +9,7 @@
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
     <dl class="meal">
-      <dt><a var="definition-chilli">Texaské chilli</a></dt>
+      <dt><a var="definition-chilli">Texaské chilli</a><a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Americká specialita. Hustá pálivá polévka plná mletého hovězího a vepřového masa, drcených rajčat, Jalapeño papriček a fazolí. Doporučujeme s česnekovou bagetou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
@@ -56,7 +56,7 @@
       <dd class="price">195 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Cheese Burger</dt>
+      <dt>Cheese Burger <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, náš <a var="definition-bbq">BBQ</a> dip, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádejte obsluhu).</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
@@ -80,7 +80,7 @@
       <li><a href="/files/full/design/salads.jpg"><img src="/files/design/salads.jpg" alt="Salads"/></a></li>
     </ul>
     <dl class="meal">
-      <dt>Cobb salát</dt>
+      <dt>Cobb salát <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Jeden z nejpopulárnějších salátů. Ledový salát, rajčata, avokádo, kuřecí maso, vajíčko, modrý plísňový sýr, grilovaná slanina, římský salát, pikantní Derby dresing, česneková bageta.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">219 Kč</dd>
@@ -133,7 +133,7 @@
       <dd class="price">219 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Chicken Kung-Pao</dt>
+      <dt>Chicken Kung-Pao <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Podle originálního čínského receptu. Kousky kuřete restované v čínském woku se zálivkou ze sojové omáčky a sladkého bílého vína, arašídy, chilli papričky, jasmínová rýže, mrkev s rozinkami.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">195 Kč</dd>
@@ -169,13 +169,13 @@
       <dd class="price">199 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Grilovaná panenka Madagaskar</dt>
+      <dt>Grilovaná panenka Madagaskar <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, <a var="definition-gratinovani">gratinované</a> brambory, krémový špenát.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">255 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt><a var="definition-bbq">BBQ</a> Baby Back Ribs</dt>
+      <dt><a var="definition-bbq">BBQ</a> Baby Back Ribs <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Vepřová žebírka grilovaná v naší pikantní <a var="definition-bbq">BBQ</a> omáčce, hranolky, česnekový dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">259 Kč</dd>
@@ -193,7 +193,7 @@
       <li><a href="/files/full/design/steaks.jpg"><img src="/files/design/steaks.jpg" alt="Steaks"/></a></li>
     </ul>
     <dl class="meal">
-      <dt>Grilled Fillet Mignon, 180 g</dt>
+      <dt>Grilled Fillet Mignon, 180 g <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Steak z hovězí svíčkové z mladého býčka (z českých chovů), obalený sušenou slaninou, šťouchané brambory s pórkem, slaninou a máslem, krémový špenát, grilovaný na vnitřní teplotu podle vašeho přání.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">398 Kč</dd>
@@ -211,13 +211,13 @@
       <dd class="price">468 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Rib Eye Steak, 300 g</dt>
+      <dt>Rib Eye Steak, 300 g <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Jeden z nejpopulárnějších steaků. <a var="definition-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>New York Strip <a var="definition-au-poivre">Steak au Poivre</a>, 300 g</dt>
+      <dt>New York Strip <a var="definition-au-poivre">Steak au Poivre</a>, 300 g <a href="#signature"><span class="fas fa-award">i</span></a></dt>
       <dd>Velice populární americký steak. <a var="definition-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
@@ -355,6 +355,7 @@
     <h id="informace">Informace pro hosty</h>
     <desc>n/a</desc>
     <ul>
+      <li id="signature"><a href="#signature"><span class="fas fa-award">i</span></a> Signature food of Steakgrill – tato jídla nás charakterizují a patří k nejoblíbenějším. Je to také doporučení jídel pro naše nové zákazníky.</li>
       <li var="inputvar-rezervace" class="print">Rezervace jsou možné pouze telefonicky.</li>
       <li>Záměna jedné přílohy u každého jídla je možná podle Vašeho přání.</li>
       <li>Veškerá jídla vydáváme s sebou a za zabalení účtujeme 5 Kč.</li>
