--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -200,25 +200,25 @@
     </dl>
     <dl class="meal">
       <dt>Grilled Pork Chop, 300 g</dt>
-      <dd>Grilovaný steak z vepřové pečeně s kostí marinovaný v bylinkové marinádě, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, remuláda.</dd>
+      <dd>Grilovaný steak z vepřové pečeně s kostí marinovaný v bylinkové marinádě, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, ajvar dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">259 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chuck Flap, 300 g</dt>
-      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – <a var="definition-usdachoice">USDA Choice</a> z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, remuláda.</dd>
+      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – <a var="definition-usdachoice">USDA Choice</a> z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, ajvar dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">468 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Rib Eye Steak, 300 g <a href="#signature"><span class="fas fa-award">i</span></a></dt>
-      <dd>Jeden z nejpopulárnějších steaků. <a var="definition-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dd>Jeden z nejpopulárnějších steaků. <a var="definition-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, ajvar dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>New York Strip <a var="definition-au-poivre">Steak au Poivre</a>, 300 g <a href="#signature"><span class="fas fa-award">i</span></a></dt>
-      <dd>Velice populární americký steak. <a var="definition-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dd>Velice populární americký steak. <a var="definition-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, ajvar dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
@@ -347,9 +347,9 @@
       <dt>Bylinkové máslo</dt>
       <dd class="price">35 Kč</dd>
       <dd>Česnek, bazalka, petržel, koření.</dd>
-      <dt>Remuláda</dt>
+      <dt>Ajvar dip</dt>
       <dd class="price">33 Kč</dd>
-      <dd>Majonéza, ančovičky, bylinky, okurky, kapary.</dd>
+      <dd>Červené papriky, lilek, česnek.</dd>
     </dl>
 
     <h id="informace">Informace pro hosty</h>
